# gnu_linux

01_TerminalProject/: Makefile  Show.c  readme.md
02_Multifile/: Makefile  fun.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  scenario1.gdb  scenario2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect_remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  run.sh
08_I18n/: configure.ac
08_I18n/po/: POTFILES.in  ru.po
08_I18n/src/: Makefile.am  guessr.c
09_PatchDiff/: Makefile  maze_initial.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.c  libbuf.c
10_LibTesting/tests/: Makefile.am  dummy.check  upstream.check
12_01_InstallPackaging/po/: ru.po
12_01_InstallPackaging/tests/: test_addition.c
12_InstallPackaging/: Doxyfile  Makefile.am  configure.ac
12_InstallPackaging/doc/: Makefile.am  addition.1
12_InstallPackaging/po/: en.po
12_InstallPackaging/src/: Makefile.am  addition.c  main.c
12_InstallPackaging/tests/: Makefile.am
